--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c34f0cbae4.js" crossorigin="anonymous"></script>
     <title>Emma DeNunzio</title>
   </head>
   <body>
